icon overlap fixed, photos added to gallery, content trimmed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2546,7 +2546,7 @@
 
 			ul.icons li {
 				display: inline-block;
-				padding: 0 0.75rem 0 0;
+				padding: 1rem 0.75rem 0 0;
 			}
 
 				ul.icons li:last-child {
